@@ -36,7 +36,8 @@ survfitCI(X, Y, weights,  id, istate,
                        se.fit=TRUE,
                        conf.int= .95,
                        conf.type=c('log',  'log-log',  'plain', 'none'),
-                       conf.lower=c('usual', 'peto', 'modified'))
+                       conf.lower=c('usual', 'peto', 'modified'),
+                       influence=FALSE)
 survfitKM(x, y, casewt=rep(1,length(x)),
                        type=c('kaplan-meier', 'fleming-harrington', 'fh2'),
                        error=c('greenwood', "tsiatis"), se.fit=TRUE,
